# aoc_cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  day_01.cpp  day_02.cpp  day_03.cpp  day_04.cpp  day_05.cpp  day_06.cpp  day_07.cpp  day_08.cpp  day_09.cpp  day_10.cpp  day_11.cpp  day_11.py  day_12.cpp  day_13.cpp  day_14.cpp  day_15.cpp  day_16.cpp  day_17.cpp  day_18.cpp  day_19.cpp  day_20.cpp  day_21.cpp  day_22.cpp  day_23.cpp  day_24.cpp  day_25.cpp  day_template.py  utils.cpp  utils.hpp
inputs/: day_14_souvenir.txt  day_17.txt  day_21_debug.txt  day_24_debug.txt  day_24_fixed.txt
